# rules_graalvm

./: .gitignore  LICENSE.md  README.md  RULE_DEVELOPERS.md  WORKSPACE
graalvm/: defs.bzl  repositories.bzl
graalvm/repositories/: BUILD.bazel  defs.bzl  graalvm_linux_x86_64.BUILD.bazel  known_graalvm_releases.bzl  known_graalvm_repositories.bzl
graalvm/rules/graalvm_compiler_toolchain/: defs.bzl
graalvm/rules/graalvm_java_test/: BUILD.bazel  defs.bzl
graalvm/rules/graalvm_runtime_toolchain/: defs.bzl
graalvm/rules/graalvm_runtime_toolchain/default_templates/: BUILD.bazel  graalvm_java_test.sh.template
graalvm/rules/graalvm_truffle_instrument/: defs.bzl
graalvm/rules/java_test/: BUILD.bazel  defs.bzl  java_test_script.sh.template
graalvm/rules/runtime_toolchain/: defs.bzl
graalvm/rules/test/: BUILD.bazel  defs.bzl
graalvm/toolchains/remote/linux/x86_64/: BUILD.bazel
graalvm/toolchains/runtime/linux/x86_64/: BUILD.bazel
tests/: BUILD.bazel
tests/hello/java/: BUILD.bazel  Greeter.java  Hello.java
tests/rules/graalvm_java_test/: BUILD.bazel
tests/rules/graalvm_truffle_instrument/: BUILD.bazel
tests/test_targets/trivial_java_targets/: BUILD.bazel  Greeter.java  Main.java
tests/test_targets/trivial_truffle_instrument/: BUILD.bazel  TrivialTruffleInstrument.java
