package(
    default_visibility = ["//visibility:public"],
)

load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "main",
    srcs = ["Main.java"],
    main_class = "trivial_java_targets.Main",
    deps = [":greeter"],
)

java_library(
    name = "greeter",
    srcs = ["Greeter.java"],
)